--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
@@ -1,4 +1,5 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<!-- modal confirm -->
 <div class="ui modal confirm">
     <i class="close icon" style="margin-top: -50px"></i>
     <div class="header">
@@ -6,17 +7,22 @@
     </div>
 
     <div class="actions">
-        <div class="ui button primary" (click)="onSend('C')">ส่งให้ส่วนกลาง</div>
-        <div class="ui button primary" (click)="onSend('S')">ส่งให้ภาคพื่นที่</div>
-
+        <div class="ui grid">
+            <div class="sixteen wide center aligned column">
+                <div class="ui button primary" (click)="onSend('C')">ส่งให้ส่วนกลาง</div>
+                <div class="ui button primary" (click)="onSend('S')">ส่งให้ภาคพื่นที่</div>      
+            </div>                 
+        </div>       
     </div>
 
-    <div class="ui grid">
+    <!-- <div class="ui grid">
         <div class="sixteen wide center aligned column">
             <button class="ui button" type="button">center</button>
         </div>
-    </div>
+    </div> -->
 </div>
+
+<!-- form -->
 <div class="ui grid">
     <div class="sixteen wide column">
         <h2 class="ui header">เพิ่มข้อมูลภายนอก</h2>
@@ -77,35 +83,29 @@
         </div>
 
         <div class="ui segment">
-            <div class="ui grid">
-                <div class="two wide column"></div>
-                <div class="seven wide column">
-                    <div class="ui form">
-                        <div class="inline fields">
-                            <div class="sixteen wide field">
-                                <label style="width: 5em;">ภาค</label>
-                                <select class="ui dropdown ai" name="sector" id="sector" (change)="changeSector()">
-                                    <option value="">ทั้งหมด</option>
-                                    <option *ngFor="let list of sectorArr">{{list.value1}}</option>
-                                </select>
-                            </div>
+                <div class="ui form">
+                    <div class="inline fields">
+                        <div class="three wide field"></div>
+                        <div class="three wide field">
+                            <label style="width: 5em;">ภาค</label>
+                            <select class="ui dropdown ai" name="sector" id="sector" (change)="changeSector()">
+                                <option value="">ทั้งหมด</option>
+                                <option *ngFor="let list of sectorArr">{{list.value1}}</option>
+                            </select>
+                        </div>
+                        <div class="three wide field">
+                            <label style="width: 5em;">พิกัด</label>
+                            <select class="ui dropdown ai" name="coordinates" id="coordinates" (change)="changeCoordinates()">
+                                <option value="">ทั้งหมด</option>
+                                <option *ngFor="let list of coordinatesArr">{{list.value1}}</option>
+                            </select>
+                        </div>
+                        <div class="three wide field"> 
+                            <button class="ui gray button" (click)="onClear()"><i class="undo icon"></i>ข้อมูลทั้งหมด</button>
                         </div>
                     </div>
                 </div>
-                <div class="seven wide column">
-                    <div class="ui form">
-                        <div class="inline fields">
-                            <div class="sixteen wide field">
-                                <label style="width: 5em;">พิกัด</label>
-                                <select class="ui dropdown ai" name="coordinates" id="coordinates" (change)="changeCoordinates()">
-                                    <option value="">ทั้งหมด</option>
-                                    <option *ngFor="let list of coordinatesArr">{{list.value1}}</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
             <form ngNativeValidate (submit)="openModel()">
                 <div class="ui grid">
                     <div class="sixteen wide column">
