--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/receive-line-user/receive-line-user.component.html
@@ -50,8 +50,8 @@
       <form ngNativeValidate (submit)="onSend($event)">
         <div class="ui grid">
           <div class="sixteen wide column">
-            <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-              <table id="sendLineUser" class="ui small celled table aligned hover striped selectable" style="width: 5000px;">
+            <div >
+              <table id="sendLineUser" class="ui small celled table aligned hover striped selectable nowrap" style="width:100%;">
                 <thead id="trDrinamic">
                 </thead>
                 <tbody>
