--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
@@ -68,19 +68,19 @@
 
 <!-- add modal -->
 <div class="ui large modal transition hidden" id='modalAdd'>
-    <div class="header" style="text-align: center !important;">
-      ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
-    </div>
-  
-    <div class="scrolling content">
-    <form id="addModal-form" ngNativeValidate >
+  <div class="header" style="text-align: center !important;">
+    ระบุรายละเอียดค่าใช้จ่ายในการเดินทางไปราชการ
+  </div>
+
+  <div class="scrolling content">
+    <form id="addModal-form" ngNativeValidate>
       <div class="ui form center aligned">
-  
+
         <input type="hidden" id="id">
         <input type="hidden" id="idDtl">
         <input type="hidden" id="idProcess">
-  
-  
+
+
         <div class="inline fields">
           <div class="three wide field right aligned">
             <label>ชื่อ</label>
@@ -115,7 +115,7 @@
             <label>ระดับ</label>
           </div>
           <div class="three wide field">
-            <select class="ui dropdown" id="grade" name="grade" style="width: 100%">
+            <select class="ui dropdown" id="grade" name="grade" (change)="getAllowanceRAndRoostR($event)" style="width: 100%">
               <option value="">เลือก</option>
               <option *ngFor="let data of gradeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
             </select>
@@ -129,7 +129,8 @@
             <div class="ui calendar" id="modalDate3" style="width: 100%">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                  [attr.required]="true">
               </div>
             </div>
           </div>
@@ -145,91 +146,94 @@
             </div>
           </div>
         </div>
+
         <div class="inline fields">
-            <div class="three wide field ui right aligned">
-              <label>ออกเดินทางจาก</label>
+          <div class="three wide field ui right aligned">
+            <label>ออกเดินทางจาก</label>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureFrom1">
+              <input type="radio" name="departureFrom" id="departureFrom1" value="1179" (click)="getDepartureFrom($event)">
+              <label>
+                <b>บ้านพัก</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureFrom1">
-                <input type="radio" name="departureFrom" id="departureFrom1" value="1179" (click)="getDepartureFrom($event)">
-                <label>
-                  <b>บ้านพัก</b>
-                </label>
-              </div>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureFrom2">
+              <input type="radio" name="departureFrom" id="departureFrom2" value="1180" (click)="getDepartureFrom($event)">
+              <label>
+                <b>สำนักงาน</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureFrom2">
-                <input type="radio" name="departureFrom" id="departureFrom2" value="1180" (click)="getDepartureFrom($event)">
-                <label>
-                  <b>สำนักงาน</b>
-                </label>
-              </div>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureFrom3">
+              <input type="radio" name="departureFrom" id="departureFrom3" value="1181" (click)="getDepartureFrom($event)">
+              <label>
+                <b>ประเทศไทย</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureFrom3">
-                <input type="radio" name="departureFrom" id="departureFrom3" value="1181" (click)="getDepartureFrom($event)">
-                <label>
-                  <b>ประเทศไทย</b>
-                </label>
-              </div>
-            </div>
-            <div class="two wide field "></div>
-            <div class="two wide field ui right aligned">
-              <label>ตั่งแต่วันที่ เวลา</label>
-            </div>
-            <div class="three wide field">
-              <div class="ui calendar" id="modalDate5" style="width: 100%">
-                <div class="ui input left icon">
-                  <i class="time icon"></i>
-                  <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
-                    [attr.required]="true">
-                </div>
+          </div>
+          <div class="two wide field "></div>
+          <div class="two wide field ui right aligned">
+            <label>ตั่งแต่วันที่ เวลา</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate5" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                  [attr.required]="true">
               </div>
             </div>
           </div>
-  
-          <div class="inline fields">
-            <div class="three wide field ui right aligned">
-              <label>กลับถึง</label>
+        </div>
+
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>กลับถึง</label>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureTo1">
+              <input type="radio" name="departureTo" id="departureTo1" value="1179" (click)="getDepartureTo($event)">
+              <label>
+                <b>บ้านพัก</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureTo1">
-                <input type="radio" name="departureTo" id="departureTo1" value="1179" (click)="getDepartureTo($event)">
-                <label>
-                  <b>บ้านพัก</b>
-                </label>
-              </div>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureTo2">
+              <input type="radio" name="departureTo" id="departureTo2" value="1180" (click)="getDepartureTo($event)">
+              <label>
+                <b>สำนักงาน</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureTo2">
-                <input type="radio" name="departureTo" id="departureTo2" value="1180" (click)="getDepartureTo($event)">
-                <label>
-                  <b>สำนักงาน</b>
-                </label>
-              </div>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox departureTo3">
+              <input type="radio" name="departureTo" id="departureTo3" value="1181" (click)="getDepartureTo($event)">
+              <label>
+                <b>ประเทศไทย</b>
+              </label>
             </div>
-            <div class="two wide field ">
-              <div class="ui radio checkbox departureTo3">
-                <input type="radio" name="departureTo" id="departureTo3" value="1181" (click)="getDepartureTo($event)">
-                <label>
-                  <b>ประเทศไทย</b>
-                </label>
-              </div>
-            </div>
-            <div class="two wide field "></div>
-            <div class="two wide field ui right aligned">
-              <label>กลับถึงวันที่ เวลา</label>
-            </div>
-            <div class="three wide field">
-              <div class="ui calendar" id="modalDate6" style="width: 100%">
-                <div class="ui input left icon">
-                  <i class="time icon"></i>
-                  <input type="text" name="date-raw" id="returnDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
-                </div>
+          </div>
+          <div class="two wide field "></div>
+          <div class="two wide field ui right aligned">
+            <label>กลับถึงวันที่ เวลา</label>
+          </div>
+          <div class="three wide field">
+            <div class="ui calendar" id="modalDate6" style="width: 100%">
+              <div class="ui input left icon">
+                <i class="time icon"></i>
+                <input type="text" name="date-raw" id="returnDate"  autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
               </div>
             </div>
           </div>
-        <div class="inline fields">
+        </div>
+
+
+        <!-- <div class="inline fields">
           <div class="three wide field ui right aligned">
             <label>กรณีค่าเบี้ยเลี้ยง</label>
           </div>
@@ -259,32 +263,94 @@
               <option *ngFor="let data of roostList" value="{{data.lovId}}">{{data.typeDescription}}</option>
             </select>
           </div>
-          <div class="two wide field right aligned"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
+          <div class="two wide field right aligned" *ngIf=" ifroost =='1188'  && ifroost !='' ">
             <label>ประเภทการฝึกอบรม</label>
           </div>
-          <div class="three wide field"  *ngIf=" ifroost =='1188'  && ifroost !='' ">
-            <select class="ui dropdown" id="trainingType" style="width: 100%" >
+          <div class="three wide field" *ngIf=" ifroost =='1188'  && ifroost !='' ">
+            <select class="ui dropdown" id="trainingType" style="width: 100%">
               <option value="">เลือก</option>
               <option *ngFor="let data of trainingTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
             </select>
           </div>
-          <div class="two wide field right aligned"  *ngIf=" ifroost !='1187' && ifroost !='' ">
+          <div class="two wide field right aligned" *ngIf=" ifroost !='1187' && ifroost !='' ">
             <label>ประเภทห้อง</label>
           </div>
-          <div class="three wide field"  *ngIf=" ifroost !='1187'  && ifroost !='' ">
-            <select class="ui dropdown" id="roomType" style="width: 100%" >
+          <div class="three wide field" *ngIf=" ifroost !='1187'  && ifroost !='' ">
+            <select class="ui dropdown" id="roomType" style="width: 100%">
               <option value="">เลือก</option>
               <option *ngFor="let data of roomTypeList" value="{{data.lovId}}">{{data.typeDescription}}</option>
             </select>
           </div>
-  
+
+        </div> -->
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>จำนวนวัน</label>
+          </div>
+          <div class="two wide field">
+            <input id="numberDateAllowance" type="number" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>วัน</label>
+          </div>
+          <div class="two wide field">
+            <input id="numberHoursAllowance" type="number" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>ชั่วโมง</label>
+          </div>
         </div>
+
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>ค่าเบี้ยเลี้ยง</label>
+          </div>
+          <div class="three wide field">
+            <input id="allowanceR" type="number" (change)="changeAllowanceR()" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
+          </div>
+          <div class="two wide field ui right aligned">
+            <label>ค่าเบี้ยเลี้ยงรวม</label>
+          </div>
+          <div class="three wide field">
+            <input id="allowanceTotal" type="number" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
+          </div>
+        </div>
+
         <div class="inline fields">
           <div class="three wide field ui right aligned">
             <label>จำนวนวันเข้าพัก</label>
           </div>
-          <div class="three wide field" >
-            <input id="numberDate" type="number" [attr.step]="1" required>
+          <div class="two wide field">
+            <input id="numberDateRoost" type="number" (change)="getRoostTotal($event)" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>วัน</label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>ค่าที่พัก</label>
+          </div>
+          <div class="three wide field">
+            <input id="roostR" type="number" (change)="changeRoostR()" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
+          </div>
+          <div class="two wide field ui right aligned">
+            <label>ค่าที่พักรวม</label>
+          </div>
+          <div class="three wide field">
+            <input id="roostTotal" type="number" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
           </div>
         </div>
         <div class="inline fields">
@@ -292,19 +358,38 @@
             <label>ค่าพาหนะ</label>
           </div>
           <div class="three wide field">
-            <input id="passage" type="number" [attr.step]="1" required>
+            <input id="passage" type="number" (change)="getExpensesTotal()" [attr.step]="1" required>
           </div>
-  
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
+          </div>
+
           <div class="two wide field right aligned">
             <label>ค่าใช้จ่ายอื่น</label>
           </div>
           <div class="three wide field">
-            <input id="otherExpenses" type="number" [attr.step]="1" required>
+            <input id="otherExpenses" type="number" (change)="getExpensesTotal()" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="three wide field ui right aligned">
+            <label>ค่าใช้จ่ายรวม</label>
+          </div>
+          <div class="three wide field">
+            <input id="expensesTotal" type="number" [attr.step]="1" required>
+          </div>
+          <div class="one wide field ui right aligned">
+            <label>บาท</label>
           </div>
         </div>
         <div class="ui grid">
           <div class="three wide column">
-            <label><b>หมายเหตุ</b></label>
+            <label>
+              <b>หมายเหตุ</b>
+            </label>
           </div>
           <div class="ten wide column">
             <div class="ui form " style="width: 100%">
@@ -315,16 +400,16 @@
         </div>
         <br>
       </div>
-      </form>
-    </div>
-  
-    <div class="actions">
-      <div class="ui red deny button">ยกเลิก</div>
-      <div class="ui primary button" *ngIf=" btnModal=='E' " (click)="editData()">ดำเนินการแก้ไข</div>
-      <div class="ui green button"  *ngIf=" btnModal=='S' " (click)="saveData()">บันทึก</div>
-    </div>
+    </form>
   </div>
-  <!--End add modal -->
+
+  <div class="actions">
+    <div class="ui red deny button">ยกเลิก</div>
+    <div class="ui primary button" *ngIf=" btnModal=='E' " (click)="editData()">ดำเนินการแก้ไข</div>
+    <div class="ui green button" *ngIf=" btnModal=='S' " (click)="saveData()">บันทึก</div>
+  </div>
+</div>
+<!--End add modal -->
 
 <!-- add Haed modal -->
 <div class="ui large modal  transition hidden" id='modalAddHead'>
